--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /* css styles */
+
+.gb-orange {
+    color: #d65d0e;
+}
+
+.gb-red {
+    color: #cc241d;
+}
+
+.gb-blue {
+    color: #076678;
+}
+
+.gb-green {
+    color: #b8bb26;
+}
