Add Julian's background notes.

--- a/notes/styles.css
+++ b/notes/styles.css
@@ -1,1 +1,31 @@
 /* css styles */
+
+.table th,
+table thead th {
+  text-transform: none !important;
+}
+
+.gb-orange {
+    color: #d65d0e;
+}
+
+.gb-red {
+    color: #cc241d;
+}
+
+.gb-blue {
+    color: #076678;
+}
+
+.gb-green {
+    color: #b8bb26;
+}
+
+.huge {
+  font-size: 3em;
+  font-weight: bold; /* optional */
+}
+
+.smaller {
+  font-size: 90%;
+}
